--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,11 @@ jdk:
 
 script:
 - ./gradlew clean build -PspockVersion=0.7-groovy-2.0 && ./gradlew clean build -PspockVersion=1.0-groovy-2.3
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/0c47152ec0b752e481c8
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
