--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 
 
 group = 'com.blogspot.toomuchcoding'
-version = '1.0.4-SNAPSHOT'
+version = '1.1.0'
 description = "Spock subjects-collaborators extension"
 
 sourceCompatibility = 1.6
