--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 
 
 group = 'com.blogspot.toomuchcoding'
-version = '1.1.1-SNAPSHOT'
+version = '1.2.0'
 description = "Spock subjects-collaborators extension"
 
 sourceCompatibility = 1.6
@@ -62,4 +62,3 @@ publishing {
 if (!version.contains('SNAPSHOT')) {
     apply from: "$rootDir/gradle/release.gradle"
 }
-
