--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 
 
 group = 'com.blogspot.toomuchcoding'
-version = '1.2.2-SNAPSHOT'
+version = '1.2.2'
 description = "Spock subjects-collaborators extension"
 
 sourceCompatibility = 1.6
