--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<spock.version>2.0-groovy-3.0</spock.version>
 		<objenesis.version>3.2</objenesis.version>
 		<byte-buddy.version>1.11.0</byte-buddy.version>
+		<junit.version>4.13.1</junit.version>
 
 		<gmavenplus-plugin.version>1.12.1</gmavenplus-plugin.version>
 		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
@@ -69,7 +70,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
