--- a/pom.xml
+++ b/pom.xml
@@ -71,17 +71,17 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 
-		<groovy.version>4.0.11</groovy.version>
+		<groovy.version>4.0.13</groovy.version>
 		<spock.version>2.3-groovy-4.0</spock.version>
-		<objenesis.version>3.2</objenesis.version>
-		<byte-buddy.version>1.11.0</byte-buddy.version>
+		<objenesis.version>3.3</objenesis.version>
+		<byte-buddy.version>1.14.5</byte-buddy.version>
 
 		<gmavenplus-plugin.version>2.1.0</gmavenplus-plugin.version>
-		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
-		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
-		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+		<maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
+		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
 		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-		<build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
+		<build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
 	</properties>
 
 	<dependencies>
