--- a/pom.xml
+++ b/pom.xml
@@ -50,17 +50,13 @@
 		</developer>
 	</developers>
 	<distributionManagement>
-		<downloadUrl>https://github.com/marcingrzejszczak/spock-subjects-collaborators-extension</downloadUrl>
-		<site>
-			<id>spock-subjects-collaborator-docs</id>
-			<url>
-				https://github.com/marcingrzejszczak/spock-subjects-collaborators-extension
-			</url>
-		</site>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
 		<repository>
-			<name>Nexus Release Repository</name>
-			<id>sonatype-nexus-staging</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
 
