--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.blogspot.toomuchcoding</groupId>
 	<artifactId>spock-subjects-collaborators-extension</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.0.1-groovy-3.0-SNAPSHOT</version>
 	<name>spock-subjects-collaborators-extension</name>
 	<description>Spock extension that allows you to inject Collaborators into Subjects. Bases on Mockito's @InjectMocks functionality</description>
 	<url>https://github.com/marcingrzejszczak/spock-subjects-collaborators-extension</url>
@@ -12,7 +12,7 @@
 			<name>Apache License, Version 2.0</name>
 			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
 			<comments>
-				Copyright 2014-2015 the original author or authors.
+				Copyright 2014-2023 the original author or authors.
 
 				Licensed under the Apache License, Version 2.0 (the "License");
 				you may not use this file except in compliance with the License.
@@ -67,8 +67,8 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 
-		<groovy.version>2.5.23</groovy.version>
-		<spock.version>2.3-groovy-2.5</spock.version>
+		<groovy.version>3.0.19</groovy.version>
+		<spock.version>2.3-groovy-3.0</spock.version>
 		<objenesis.version>3.3</objenesis.version>
 		<byte-buddy.version>1.14.5</byte-buddy.version>
 
